recursion.logo.lessons.recursion.logo.koch.PentaKoch.scala.error
PentaKoch:6: error: identifier expected but ')' found.
    pentaKoch(levels-1,length/3.)
                                ^PentaKoch:8: error: identifier expected but ')' found.
    pentaKoch(levels-1,length/3.)
                                ^PentaKoch:10: error: identifier expected but ')' found.
    pentaKoch(levels-1,length/3.)
                                ^PentaKoch:12: error: identifier expected but ')' found.
    pentaKoch(levels-1,length/3.)
                                ^PentaKoch:14: error: identifier expected but ')' found.
    pentaKoch(levels-1,length/3.)
                                ^PentaKoch:16: error: identifier expected but ')' found.
    pentaKoch(levels-1,length/3.)
                                ^